<resources>
    <string name="app_name">Converter</string>
    <string name="URL_AND_TANIUSHIN_API_KEY">https://openexchangerates.org/api/latest.json?app_id=dd182aaa13c14ecd9bcccc4c4b2f4527</string>
    <string-array name="list_of_сurrencies">
        <item>Рубль</item>
        <item>Доллар</item>
        <item>Евро</item>
        <item>Фунт</item>
        <item>Юань</item>
        <item>Гривна</item>
    </string-array>
    <string-array name="list_of_сurrencies_1">
        <item>Рубля</item>
        <item>Доллара</item>
        <item>Евро</item>
        <item>Фунта</item>
        <item>Юаня</item>
        <item>Гривны</item>
    </string-array>
    <string-array name="list_of_сurrencies_2">
        <item>Рублей</item>
        <item>Долларов</item>
        <item>Евро</item>
        <item>Фунтов</item>
        <item>Юаней</item>
        <item>Гривен</item>
    </string-array>
    <string name="defaultText">Рубль</string>
    <string name="extended_result">Расширенный результат</string>
    <string name="bank_take">Банк принимает</string>
    <string name="bank_give">Банк отдаёт</string>
    <string name="choose_currency">Выберите валюту</string>
    <string name="current_course">Текущий курс</string>
    <string name="result">Результат</string>
    <string name="more">БОЛЬШЕ</string>
    <string name="default_rub">RUB</string>
    <string name="default_usd">USD</string>
    <string name="enter_amount">Введите число</string>
    <string name="converter">Конвертер</string>
    <string name="default_usdAmount">2.38</string>
    <string name="default_rubAmount">167</string>
    <string name="developers_names">Created by TSIB</string>
    <string name="dialog_title">Для работы приложения нужно подключение к сети.</string>
    <string name="dialog_message">Включить мобильный интернет и перезагрузить приложение?</string>
    <string name="dialog_positive">Мобильный интернет</string>
    <string name="dialog_negative">WIFI</string>
</resources>
