<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#27AE60"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_monetization_on_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/converter"
                android:textColor="#ffffff"
                android:textSize="27dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bank_take"
                android:textColor="#A3A3A3"
                android:textSize="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/choose_currency"
                        android:textColor="#000000"
                        android:textSize="20dp" />

                    <Spinner
                        android:id="@+id/spinnerTakeCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:entries="@array/list_of_сurrencies" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/enter_amount"
                        android:textColor="#000000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/editTextTakeQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1.5"
                        android:backgroundTint="#A3A3A3"
                        android:hint="1"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#A3A3A3" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bank_give"
                android:textColor="#A3A3A3"
                android:textSize="25dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/choose_currency"
                        android:textColor="#000000"
                        android:textSize="20dp" />

                    <Spinner
                        android:id="@+id/spinnerGiveCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:entries="@array/list_of_сurrencies" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/current_course"
                        android:textColor="#000000"
                        android:textSize="20dp" />


                    <TextView
                        android:id="@+id/textViewCourse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="left"
                        android:paddingLeft="5dp"
                        android:textColor="#676767"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/style_7"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="15dp" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEnter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="26dp" />

                <TextView
                    android:id="@+id/devider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:background="#000000"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="26dp" />

                <TextView
                    android:id="@+id/textViewResultAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="26dp" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_rub"
                    android:textColor="#676767"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/buttonMoreDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:drawableBottom="@drawable/ic_arrow_drop_down_black_24dp"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textViewTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_usd"
                    android:textColor="#676767"
                    android:textSize="20dp" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>

