<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ndroid="http://schemas.android.com/tools"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="15dp"
    android:layout_height="wrap_content"
    ndroid:layout_marginTop="45dp"
    android:clickable="true"
    app:cardElevation="6dp"
    android:layout_marginBottom="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/const_2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_weight="1.5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/const_1">

        <TextView
            android:id="@+id/fromAmount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/default_rubAmount"
            android:textColor="#373737"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintEnd_toStartOf="@id/devider"
            app:layout_constraintTop_toTopOf="@id/const_2"
            />
        <TextView
            android:id="@+id/devider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:gravity="center"
            android:background="#373737"
            app:layout_constraintStart_toEndOf="@id/fromAmount"
            app:layout_constraintEnd_toStartOf="@id/toAmount"
            app:layout_constraintHorizontal_weight="0.8"
            app:layout_constraintBottom_toBottomOf="@id/const_2"
            app:layout_constraintTop_toTopOf="@id/const_2" />

        <TextView
            android:id="@+id/toAmount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/default_usdAmount"
            android:textColor="#373737"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/devider"
            app:layout_constraintTop_toTopOf="@id/const_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_1"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/const_2">
        <TextView
            android:id="@+id/fromText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_rub"
            android:textColor="#676767"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintEnd_toStartOf="@id/textViewEnter"
            app:layout_constraintTop_toTopOf="@id/const_1"

            />


        <TextView
            android:id="@+id/textViewEnter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="23dp"
            app:layout_constraintEnd_toStartOf="@id/textViewResultAmount"
            app:layout_constraintHorizontal_weight="0.8"
            app:layout_constraintStart_toEndOf="@id/fromText"
            app:layout_constraintTop_toTopOf="@id/const_1" />



        <TextView
            android:id="@+id/textViewResultAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_usd"
            android:textColor="#676767"
            android:textSize="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/textViewEnter"
            app:layout_constraintTop_toTopOf="@id/const_1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>



